--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.1",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
